# ChromaLab

./: .gitignore  .gitmodules  AGENTS.md  CODEX_AGENT_ORCHESTRATION.md  CONTRIBUTING.md  PIPELINE.md  PRIVACY.md  README.md  REPORT_IMPLEMENTATION_PLAN.md  REPORT_SPEC.md  ROADMAP.md  SECURITY.md  build.gradle.kts  build_log.txt  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report_link.md  validation_fixture.md
.github/workflows/: build.yml
androidApp/: CMakeLists.txt  build.gradle.kts
androidApp/cmake/: vulkan-features2-shim.h  vulkan-shaders-host-toolchain.cmake.in
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/cpp/: llama_bridge.cpp
androidApp/src/main/kotlin/com/chromalab/app/: MainActivity.kt
androidApp/src/main/res/values/: ic_launcher_colors.xml
androidApp/src/main/res/xml/: chromalab_file_paths.xml
benchmark/: README.md
benchmark/schemas/: evidence-package.schema.json  metrics.schema.json  prediction.schema.json  report-claims.schema.json  runtime-calibration-closure-record.schema.json  runtime-ocr-anchor-bridge-record.schema.json  stage123-parity-record.schema.json  stage1234-parity-record.schema.json  stage12345-parity-record.schema.json  stage123456-parity-record.schema.json  truth.schema.json
composeApp/: build.gradle.kts
docs/: ANDROID_ON_DEVICE_MODEL_BUDGET.md  ASSISTED_PEAK_REVIEW_WORKFLOW.md  ASSISTED_REVIEW_FALLBACK_WORKFLOW.md  AUTONOMOUS_ANALYSIS_EVIDENCE_GATES.md  AUTONOMOUS_ANALYZER_LAYER_OWNER_BOARD.md  AUTONOMOUS_ANALYZER_LAYER_REPLACEMENT_ROADMAP.md  AUTONOMOUS_ANALYZER_SOURCE_OF_TRUTH_INDEX.md  AUTONOMOUS_ANALYZER_STALE_FILE_AUDIT.md  AUTONOMOUS_PEAK_EVIDENCE_MODEL.md  AUTONOMOUS_PRODUCTION_ARCHITECTURE.md  CAMERA_SMART_SCAN_AUDIT.md  CHROMALAB_ARCHITECTURE_OVERVIEW.md  CHROMALAB_KNOWLEDGE_PACK_ARCHITECTURE.md  CHROMALAB_LOCAL_AI_RUNTIME.md  CHROMALAB_PUBLIC_MESSAGING_GUIDE.md  CHROMALAB_PUBLIC_REPOSITORY_QA.md  CHROMALAB_REPORT_EXPERIENCE_CONCEPT.md  CHROMALAB_SCIENTIFIC_PRODUCT_OVERVIEW.md  CHROMALAB_VALIDATION_SUMMARY.md  CHROMALAB_VISUAL_IDENTITY.md  CHROMATOGRAM_007BF5B_AUDIT.md  CHROMATOGRAM_2026_METHOD_RESEARCH_PLAN.md  CHROMATOGRAM_AUTONOMOUS_ANALYSIS_STAGE_MAP.md  CHROMATOGRAM_CALIBRATION_BENCH_PLAN.md  CHROMATOGRAM_CV_GEOMETRY_SPIKE_REVIEW.md  CHROMATOGRAM_DEEP_RESEARCH_WAVE_PLAN_20260603.md  CHROMATOGRAM_DETERMINISTIC_CV_CORE_REVIEW.md  CHROMATOGRAM_END_TO_END_GAP_AUDIT_20260603.md  CHROMATOGRAM_END_TO_END_PIPELINE_REVIEW.md  CHROMATOGRAM_FAILURE_TAXONOMY.md  CHROMATOGRAM_GEOMETRY_FAILURE_CLASSIFICATION.md  CHROMATOGRAM_GRAPH_LAYOUT_TAXONOMY.md  CHROMATOGRAM_PHASE0_BASELINE_AUDIT_20260519.md  CHROMATOGRAM_PIPELINE_FULL_TRACE_REPORT.md  CHROMATOGRAM_PIXEL_DETECTION_RESEARCH.md  CHROMATOGRAM_PRODUCTION_GRADE_MOBILE_PLAN.md  CHROMATOGRAM_PRODUCT_MODES.md  CHROMATOGRAM_REAL_ANDROID_9A0674D6_GRAPH_PANEL_AUDIT.md  CHROMATOGRAM_REAL_ANDROID_E332_ROI_MULTIPLICITY.md  CHROMATOGRAM_REGRESSION_DATASET.md  (+248 more)
docs/agent-orchestration/: AGENTS.md  CODEX_BOOTSTRAP_PROMPT.md  COMPLETENESS_AUDIT.md  MANIFEST.md  ORCHESTRATOR_AUDIT_GATE_F5BD6E32.md  README.md
docs/knowledge/: chromalab_knowledge_seed_v1.json  chromalab_knowledge_seed_v2.json
docs/research/: 2026-05-20_autonomous_first_product_research.md  2026-05-20_mobile_assisted_review_ux_research.md  2026-05-20_on_device_vlm_ocr_research.md  2026-05-20_phase0_android_performance_ondevice_ai.md  2026-05-20_phase0_expanded_agent_source_matrix.md  2026-05-20_phase0_geometry_calibration.md  2026-05-20_phase0_guided_workflow.md  2026-05-20_phase0_mobile_ux_accessibility.md  2026-05-20_phase0_ocr_vlm.md  2026-05-20_phase0_orchestrator.md  2026-05-20_phase0_qa_release_gate.md  2026-05-20_phase0_scientific_reporting_chromatography.md  2026-05-20_phase0_security_privacy_exports.md  2026-05-20_phase0_trace_peak.md  2026-05-20_phase1_shared_contracts_state.md  2026-05-20_phase2_guided_roi_editor.md  2026-05-20_phase3_guided_xy_calibration.md  2026-05-20_phase4_trace_overlay_confirmation.md  2026-05-20_phase5_autonomous_peak_detection_review.md  2026-05-20_phase6_android_ondevice_model_budget.md  2026-05-20_phase6_autonomous_multimodal_intelligence.md  2026-05-20_phase6_closeout_audit.md  2026-05-20_phase6_knowledge_pack_rag.md  2026-05-20_phase6_unblock_research.md  2026-05-20_phase6_vlm_ocr_benchmarking.md  2026-05-20_phase6c_knowledge_licensing.md  2026-05-20_phase6c_knowledge_sources.md  2026-05-20_phase6c_mobile_retrieval_packaging.md  2026-05-20_phase7_export_privacy_research.md  2026-05-20_phase7_mobile_report_ux_research.md  2026-05-20_phase7_professional_report_research.md  2026-05-20_phase7_scientific_provenance_report_research.md  2026-05-20_phase7b_report_evidence_hardening.md  2026-05-20_phase8_full_regression_validation.md  2026-05-20_phase8b_fixture_validation_mode.md  2026-05-20_phase8c_model_availability_fallback.md  2026-05-20_phase8d_tick_ocr_calibration.md  2026-05-20_phase9_android_model_validation.md  2026-05-20_phase9b_android_multi_fixture_validation.md  2026-05-20_phase9c_android_validation_repair.md  (+24 more)
docs/runtime-validation/: analysis_attempt_20260518_193915_filtered_logcat.txt  analysis_attempt_20260518_193955_app_pid_3266_logcat.txt  analysis_attempt_20260518_193955_report.md  analysis_attempt_20260518_193955_window.xml
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/chromalab-cv-core/: Cargo.toml
rust/chromalab-cv-core/src/: android_bridge.rs  axis_element_bridge.rs  lib.rs  runtime_ocr_anchor_bridge.rs  stage1_image_prep.rs
tools/android/: Run-RustAxisElementCropCorpusParity.ps1  Run-RustAxisElementCropSmoke.ps1  Run-RustBridgeSmoke.ps1  Run-TurboVecAppPrivateSmoke.ps1  Run-TurboVecKnowledgeIndexGate.ps1
tools/benchmark/: build_drc2_annotation_workflow.py  build_drc4_tick_text_annotations.py  generate_phase9j_records.py  ocr-requirements.txt  plan_drc1_annotations.py  prototype_drc6_p0_graph_layout_methods.py  prototype_drc7_panel_semantic_classifier.py  prototype_drd1_ocr_text_role_features.py  render_drc3_annotations.py  requirements.txt  score_phase9j_benchmarks.py  (+24 more)
(+1014 files in other folders)
