[package]
name = "chromalab-cv-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "chromalab_cv_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
jni = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
